--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Form Auto-Filler",
+  "name": "Auto-Filler",
   "version": "1.0",
   "description": "Fills form fields on click",
   "permissions": ["scripting", "activeTab"],
